# AltenCode

./: B-G431B-ESC1.stwb6  B-G431B-ESC1_6STEP.stwb6  README.md  STEVAL_SPIN3201.stwb6  TestBallRunningMotor.stwb6  workbench6Altenmotordrivercode.stwb6
B-G431B-ESC1/: .mxproject  .project  B-G431B-ESC1.ioc  B-G431B-ESC1.ioc.bak  B-G431B-ESC1.ioc.wb  B-G431B-ESC1.settings  B-G431B-ESC1.wbdef
B-G431B-ESC1/Inc/: drive_parameters.h  pmsm_motor_parameters.h  power_stage_parameters.h
B-G431B-ESC1/STM32CubeIDE/: .cproject  .project  B-G431B-ESC1.launch
B-G431B-ESC1/Src/: main.c  mc_configuration_registers.c  stm32g4xx_hal_msp.c
B-G431B-ESC1_6STEP/: .mxproject  .project  B-G431B-ESC1_6STEP.ioc.bak  B-G431B-ESC1_6STEP.ioc.wb  B-G431B-ESC1_6STEP.settings  B-G431B-ESC1_6STEP.wbdef
Handleiding code testen I2C/: codei2c.c
ROS_HAT_Node/: CMakeLists.txt  package.xml
ROS_HAT_Node/include/racing_bot_motordriver/: i2c_handler.hpp  motordriver_node.hpp
ROS_HAT_Node/src/: i2c_handler.cpp  motordriver_node.cpp
STEVAL_SPIN3201/: .mxproject  .project  STEVAL_SPIN3201.ioc  STEVAL_SPIN3201.ioc.bak  STEVAL_SPIN3201.ioc.wb  STEVAL_SPIN3201.settings  STEVAL_SPIN3201.wbdef
TestBallRunningMotor/: .mxproject  TestBallRunningMotor.ioc  TestBallRunningMotor.ioc.bak  TestBallRunningMotor.ioc.wb  TestBallRunningMotor.settings  TestBallRunningMotor.wbdef
workbench6Altenmotordrivercode/: .mxproject  workbench6Altenmotordrivercode.ioc  workbench6Altenmotordrivercode.ioc.bak  workbench6Altenmotordrivercode.ioc.wb  workbench6Altenmotordrivercode.settings  workbench6Altenmotordrivercode.wbdef
(+903 files in other folders)
